# dat-patch-rust

./: .gitignore  Cargo.toml
src/: archiver.rs  backup_logic.rs  cache.rs  cleaner.rs  file_scanner.rs  main.rs
tests/: full_run.rs
