[package]
name = "dat-patch-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
zip = "2.1"
uuid = { version = "1.8", features = ["v4"] }
regex = "1"

[dev-dependencies]
filetime = "0.2"
uuid = { version = "1.8", features = ["v4"] }
